    handles this for her.
  * Brought back "Stop" search button.
  * Removed lingering "Show/Hide player" menu entry on status bar context menu.
  * If seeding transfers are meant to be finished, newly finished transfers
    are not hidden for that session.
  * Audio files can be launched using the operating system's default player
    Right click on a file "Launc in <OS>"
  
 -- FrostWire Team <contact@frostwire.com>  Fri, 3 Feb 2012 23:08:00 -0500

frostwire (5.2.11) stable; urgency=high
  * Fixes bugs where some BitTorrent configuration settings were reset
    on startup.
  
 -- FrostWire Team <contact@frostwire.com>  Mon, 28 Nov 2011 16:58:31 -0500

frostwire (5.2.10) stable; urgency=high
  * Upload ratios will not be enforced to 30% of downloads anymore.
    Users will have free will to set the upload ratio of their preference.
  * Update autodownload now supported for mac.
  * Updates can now be distributed via both BitTorrent and HTTP.
  * HttpFetcher improvements for less resource consumption.
  * HttpFetcher now supports large HTTP file downlods (progressive download).
  * Improvements to Send File to a friend.
  * Fixes bug where some finished Downloads wouldn't "Show in Library"
  * Bug report system revised.
  
 -- FrostWire Team <contact@frostwire.com>  Mon, 22 Nov 2011 16:34:04 -0500

frostwire (5.2.9) stable; urgency=high
  * Enhancement: Lucene full text indexing for Smart Search database to
    allow for fuzzy searches.
  * Enhancement: Lucene full text indexing for Library database allows
    better search results on Radio search and playlist search.
  * Enhancement: Audio player will start playing currently selected audio
    source if it's on a stopped state.
  * Bug Fix: Finished Downloads shows only finished downloads.
  
 -- FrostWire Team <contact@frostwire.com>  Wed, 9 Nov 2011 12:11:10 -0500

frostwire (5.2.8) stable; urgency=high
  * Smart search updates uses less DHT resources and fixes logic bugs