@@ -36,6 +36,7 @@ frostwire (5.2.12) stable; urgency=high
     are not hidden for that session.
   * Audio files can be launched using the operating system's default player
     Right click on a file "Launc in <OS>"
+  * Removed BTJunkie search engine.
   
  -- FrostWire Team <contact@frostwire.com>  Fri, 3 Feb 2012 23:08:00 -0500
 
